apportato ulteriori modifiche

--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                     <i class="fa-solid fa-microphone "></i>
                     <p>Mute</p>
                 </div>
-                <div class="arrow nln-blck"><i class="fa-solid fa-caret-up"></i></div>
+                <div class="arrow nln-blck flex"><i class="fa-solid fa-caret-up"></i></div>
                 <div class="video nln-blck">
                     <i class="fa-solid fa-video"></i>
                     <p>Stop Video</p>
@@ -443,10 +443,6 @@
             <div class="right">
                 <p>End Meeting</p>
             </div>
-
-
-
-
         </footer>
     </div>
 </body>
